// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XMLParser Basic 1`] = `
{
  "columns": [],
  "name": "",
  "rows": [],
}
`;

exports[`XMLParser Basic XML 1`] = `
{
  "columns": [
    {
      "selector": "name",
      "text": "Name",
      "type": "string",
    },
    {
      "selector": "$.age",
      "text": "Name",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "User A",
      "20",
    ],
    [
      "User B",
      "21",
    ],
    [
      "User C1,User C2",
      "18",
    ],
  ],
}
`;

exports[`XMLParser Basic XML 2`] = `
{
  "columns": [
    {
      "selector": "_",
      "text": "Name",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "User A",
    ],
    [
      "User B",
    ],
    [
      "User C",
    ],
  ],
}
`;

exports[`XMLParser Basic XML 3`] = `
{
  "columns": [
    {
      "selector": "e1",
      "text": "value",
      "type": "number",
    },
    {
      "selector": "e2",
      "text": "foo",
      "type": "string",
    },
    {
      "selector": "e3",
      "text": "date",
      "type": "timestamp",
    },
  ],
  "name": "",
  "rows": [
    [
      2553517.5573549946,
      "hello",
      2021-11-12T00:00:00.000Z,
    ],
    [
      2552517.557354985,
      "world",
      2021-11-11T00:00:00.000Z,
    ],
  ],
}
`;
